# editor

./: angular.json  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  myworld.rs  temp.rs
src/app/: app.routes.ts
src/app/components/: SelectBox.component.ts
src/app/create/: create.component.css  create.component.html  create.component.ts
src/app/editor/: editor.component.html  editor.component.ts
src/app/home/: home.component.css  home.component.html  home.component.ts
src/app/layout/: layout.component.html  layout.component.ts
